# TachFile_To

./: .cursorrules  .gitignore  AGENT_RULES.md  ANTI_GRAVITY.md  CHANGELOG.md  CHANGELOG_RC2.md  Cargo.toml  GUIDE.md  LESSONS.md  PHASE3_DELIVERY_MANIFEST.md  README.md  README_DEV.md  RESEARCH_CANVAS.md  UI_LATENCY_CONTRACT.md  db_check.py  package.json  test_mission008.py  test_mission009.py  test_mupdf.py
.agent/skills/elite-py-314/: SKILL.md
.agent/skills/elite-rust/: SKILL.md
.agent/skills/elite-ui-rust/: SKILL.md
.agent/workflows/: elite_crate_fabrication.md  mupdf_msvc_static_linking.md
.project-context/: ACTIVE_MISSION.md  AGENT_RULES.md  ANTI_GRAVITY.md  MISSION_CONTROL.json  PROJECT_PROMPT.md
.project-context/ARCHIVE/: SKEPTIC_REPORT_TEMPLATE.md  legacy_cursorrules.md
.project-context/ARCHIVE/specs/: ARCHITECTURE_V2.4.md  IPC_PROTOCOL_V1.1_OLD.md
backend/: check_capability.py  pyproject.toml  requirements.txt
backend/app/: main.py  protocol.py
backend/app/engine/: __init__.py  cache_manager.py  evidence_extractor.py  extractor.py  loader.py  memory_monitor.py
crates/tachfileto-core/: Cargo.toml
crates/tachfileto-core/examples/: ipc_test.rs
crates/tachfileto-core/src/: lib.rs  validation.rs
crates/tachfileto-core/src/ipc/: manager.rs  mod.rs  protocol.rs  router.rs
crates/tachfileto-core/src/text/: legacy_fonts.rs  mod.rs
docs/: AGENT_RULES.md  BOUNDARY_MANIFEST.md  DEVELOPMENT_GUIDE.md  GUIDE.md  LESSONS_LEARNED.md  MDS_ALIGNMENT.md  MISSION_012A_GREEN_BUILD.md  MISSION_012B_PHASE2_LEDGER_COMPLETE.md  MISSION_012B_SIGN_OFF.md  PHASE3_FINAL_VERDICT.md  PHASE3_QUICK_REFERENCE.md  PRODUCT_SPEC.md  PR_guide.md  SYSTEM_ARCHITECTURE.md  build_guide.md  debug_ffi_windows.md
docs/adr/: ADR-002-IPC-PIVOT-ARROW.md
docs/archive/: GUIDE_legacy.md  RC1_PROTOCOL.md
docs/archive/missions/: BOUNDARY_MANIFEST.md  MISSION_012A_COMPLETION_REPORT.md  MISSION_012A_RESOURCE_COURT.md  MISSION_012B_COMPLETION_REPORT.md  MISSION_012B_ENFORCEMENT_DESIGN.md  MISSION_012B_INDEX.md  (+3 more)
docs/benchmark/: BENCHMARK_TEMPLATE.md
docs/missions/: ACTIVE_MISSION.md  MISSION_018.md  MISSION_019.md  MISSION_2026_007.md
docs/specs/: ARCHITECTURE_MASTER_V1.1.md  BUSINESS_RULES_VN_V1.2.md  DASHBOARD_SPEC_V1.0.md  ECOSYSTEM_DIAGRAM.md  GUIDE.md  INGESTION_SCHEMA.json  IPC_PROTOCOL.md  MASTER_V2.5_DASHBOARD.md  MASTER_V3.0_DASHBOARD.md  MDS_ALIGNMENT.md  MDS_ALIGNMENT_V1.0.md  MISSION_020_JANITOR.md  RULE_PACK_NHA_NUOC_V1.0.md  RULE_PACK_NHA_NUOC_V1.1.md  TACHFILETO_UI_SPEC_V1.0.md  TRUTH_CONTRACT_V1.md  UI_DESIGN_SYSTEM.md  UI_DESIGN_SYSTEM_V1.0.md  backend_worker_v1.md  evidence_loading_v1.md
docs/tests/: PDF_EXTRACTION_ACCEPTANCE_TEST.md  PERFORMANCE_GATE_TEST.md  TEST_STRATEGY.md
libs/archive/elite_pdf/: Cargo.toml  README.md  build.rs  pyproject.toml
libs/archive/elite_pdf/output/20260127_160141_real_test/: page_1.json
libs/archive/elite_pdf/src/: backpressure_controller.rs  engine_context.rs  ledger.rs  output.rs  sanitizer.rs  shim.cpp
libs/archive/elite_pdf/src/semantic/: engine.rs
libs/archive/elite_pdf/tests/: integration_test.rs
libs/elite_pdf/: Cargo.toml  build.rs  pyproject.toml  verify_ledger.py  verify_phase_3.py  verify_phase_3_5.py
libs/elite_pdf/benches/: pdf_benchmark.rs
libs/elite_pdf/src/: backpressure_controller.rs  cache_registry.rs  engine_context.rs  ledger.rs  lib.rs  mupdf_text.rs  parallel_dispatcher.rs  prefetch_engine.rs  sanitizer.rs
libs/elite_pdf/src/semantic/: engine.rs  tests.rs
libs/iron_adapter/: Cargo.toml
libs/iron_engine/: ARCHITECTURE.md  Cargo.toml
libs/iron_engine/src/: calculator.rs  exporter.rs  lib.rs  transformer.rs  validation_engine.rs
libs/iron_engine/src/ast/: builder.rs  mod.rs  node.rs  sink.rs
libs/iron_engine/src/ast/heuristics/: mod.rs  sanitizer.rs  table.rs
libs/iron_engine/src/diff/: heading_diff.rs  mod.rs  report.rs  section_diff.rs  table_diff.rs
libs/iron_engine/src/ingestor/: mod.rs
libs/iron_engine/tests/: bridge_integration.rs  streaming_pipeline_test.rs  test_validation_r01.rs  test_validation_r05.rs
libs/iron_engine/tests/mocks/: docling_v2_export.json
libs/iron_python_bridge/: Cargo.toml  INVALID_TDD_VIOLATION.md  build.rs  metadata.json
libs/iron_python_bridge/python/: extraction.py  extraction_worker.py  test_extraction.py
libs/iron_python_bridge/python/tests/: debug_docling.py  test_extraction_v2.py
libs/iron_python_bridge/src/: capability_probe.rs  ledger_migration.rs  lib.rs  models.rs  process_isolation.rs  stress_test.rs  unified_extractor.rs
libs/iron_python_bridge/tests/scripts/: verify_pdf.py
libs/iron_table/: Cargo.toml
libs/iron_table/src/: contract.rs  lib.rs  normalizer.rs  project.rs
libs/iron_table/tests/: contract_tests.rs
samples/: test.docx  test.md  test.xlsx
scripts/debug/: capture_build.py  debug_imports.py  pyproject.toml  requirements.txt  test_import_release.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ipc.rs  lib.rs  main.rs
src-tauri/src/cache/: disk.rs  memory.rs
src-tauri/src/ipc/: mod.rs  protocol.rs
src-tauri/src/strategy/: mod.rs  tier_selector.rs
src/types/: ipc.ts
test/batch_stress_test/: benchmark.py
test/pdf/: test_single_137.md
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.css  App.svelte  App.tsx  index.css  main.tsx
ui/src-tauri/: Cargo.toml  build_error.txt  tauri.conf.json  test_output.txt
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: dashboard.rs  excel_engine.rs  executioner.rs.old  lib.rs  lib.rs_temp_check  main.rs  normalizer.rs  resource_court.rs  telemetry.rs  telemetry_state.rs
ui/src-tauri/src/commands/: export.rs  mod.rs  repair.rs  ui_bridge.rs  validate_file.rs
ui/src-tauri/src/core_contract/: README.md  ingestion_object.rs  mod.rs  ui_contract.rs
ui/src-tauri/src/executioner/: api.rs  discipline.rs  executor.rs  idle_controller.rs  ledger.rs  mod.rs  parallel_engine.rs  phase_3_tests.rs  recovery.rs  tauri_integration.rs
(+87 files in other folders)
