[project]
name = "tachfileto-backend"
version = "0.1.0"
description = "Python worker for TachFileTo - Heavy computation engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core OCR/PDF Engine
    "docling>=1.0.0,<2.0.0",
    
    # Schema Validation
    "pydantic>=2.0.0,<3.0.0",
    
    # System Monitoring
    "psutil>=5.9.0,<6.0.0",
    
    # Image Processing
    "Pillow>=10.0.0,<11.0.0",
    
    # Fast JSON (optional but recommended)
    "orjson>=3.9.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
