[package]
name = "tachfileto"
version = "0.1.0"
description = "High Performance Evidence Loading System"
edition = "2021"
authors = ["TachFileTo Core Team"]
license = "MIT"

[dependencies]
# Tauri Framework
tauri = { version = "1.6", features = ["api-all"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.35", features = ["full", "process", "io-util"] }

# UUID Generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# LRU Cache for Layer 2
lru = "0.12"

# SQLite for Layer 3 Disk Cache
rusqlite = { version = "0.31", features = ["bundled"] }

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# System Information (RAM monitoring)
sysinfo = "0.30"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Base64 encoding for images
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
