[package]
name = "tachfileto"
version = "0.1.0"
description = "Antigravity PDF Processing Engine"
authors = ["TachFileTo Team"]
edition = "2021"
rust-version = "1.78"

[build-dependencies]
# Tauri v2 Build (2025 Standard)
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri v2 Core (2025 Standard)
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# UUID for request tracking
uuid = { version = "1.10", features = ["v4", "fast-rng"] }

# LRU Cache for Layer 2
lru = "0.12"

# Base64 encoding
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
