[package]
name = "tachfileto"
version = "1.0.0"
edition = "2021"

# Prevent cargo from publishing this crate
publish = false

[lib]
name = "tachfileto_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
iron_engine = { path = "../libs/iron_engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-fs = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
