[package]
name = "tachfileto-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

