
[package]
name = "elite_pdf"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.92"
description = "Elite No-GIL MuPDF wrapper - Rust implementation for TachFileTo"
authors = ["Elite 9 Team <elite9@tachfileto.vn>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/elite9/tachfileto"
keywords = ["pdf", "mupdf", "no-gil", "extraction", "rendering"]

[lib]
name = "elite_pdf"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 - move extension-module to feature
pyo3 = { git = "https://github.com/PyO3/pyo3", features = [
    "serde",
    "auto-initialize",
] }

# MuPDF bindings
mupdf-sys = { version = "0.5.0", optional = true }

anyhow = "1.0"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
tracing = "0.1"
bytes = "1.9"

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[features]
default = ["pyo3/extension-module"]
experimental = []
vendored-mupdf = ["dep:mupdf-sys"]
use-mupdf-sys = ["dep:mupdf-sys"]

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "pdf_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
