[package]
name = "iron_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
iron_table = { path = "../iron_table" }
polars = { version = "=0.52.0", default-features = false, features = [
    "dtype-full",
    "serde",
] }
rust_xlsxwriter = "0.93.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
iron_adapter = { path = "../iron_adapter" }
regex = "1.12.3"

[dev-dependencies]
