[project]
name = "iron-python-bridge"
version = "0.1.0"
description = "PyO3-based Python embedding for Iron Core PDF extraction"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymupdf>=1.24.0",  # fitz
    "docling>=1.0.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.9.0", "mypy>=1.14.0"]

# --- Ruff Configuration (Linter & Formatter) ---
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# E: Error, F: Pyflakes, UP: Upgrade syntax, I: Import sort
# B: Bugbear, S: Security, N: Naming
select = ["E", "F", "UP", "I", "B", "S", "N"]

# Temporarily disable ANN (annotations) to avoid overwhelming errors
# Uncomment when ready: "ANN"

ignore = ["E501"] # Line too long (let formatter handle it)

[tool.ruff.lint.isort]
known-first-party = ["extraction"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["libs/iron_python_bridge/python"]
python_files = "test_*.py"

# --- MyPy Configuration ---
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Enable gradually
