[package]
name = "tachfileto-bin"
version = "3.1.1"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
tauri = { version = "2.9", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.52", features = ["lazy", "dtype-struct", "serde"] }
calamine = { version = "0.32", features = ["dates"] }
deunicode = "1.6"

[lib]
name = "tachfileto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.5.3"