[package]
name = "tachfileto-bin"
version = "3.1.1"
edition = "2024"
rust-version = "1.92"

[dependencies]
tauri = { version = "2.2", features = ["devtools"] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
polars = { version = "0.52.0", features = [
    "lazy",
    "dtype-struct",
    "serde",
    "timezones",
] }
calamine = { version = "0.32", features = ["dates"] }
deunicode = "1.6"
uuid = { version = "1.11", features = ["serde", "v4"] }
anyhow = "1.0"
strsim = "0.11"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.31"
tempfile = "3.0"
iron_core = { path = "../../../iron_core" }
iron_python_bridge = { path = "../../libs/iron_python_bridge" }
iron_table = { path = "../../libs/iron_table" }
iron_adapter = { path = "../../libs/iron_adapter" }
iron_engine = { path = "../../libs/iron_engine" }
elite_pdf = { path = "../../libs/elite_pdf" }
dashmap = "6.1.0"
crossbeam-channel = "0.5.15"
base64 = "0.22"

[lib]
name = "tachfileto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
